--- a/src/Cli/dotnet/CommonLocalizableStrings.resx
+++ b/src/Cli/dotnet/CommonLocalizableStrings.resx
@@ -524,7 +524,7 @@
     <value>Command '{0}' uses unsupported runner '{1}'."</value>
   </data>
   <data name="SolutionExecutableConfigurationMismatchError" xml:space="preserve">
-    <value>Multiple executable projects in the solution contain conflicting '{0}' values. Ensure the values match. Consider using a Directory.build.props file to set all project configurations. Conflicting projects:
+    <value>Multiple solution project(s) contain conflicting '{0}' values; ensure the values match. Consider using a Directory.build.props file to set all project configurations. Conflicting project:
 {1}.</value>
   </data>
   <data name="ShellShimConflict" xml:space="preserve">
