--- a/src/Cli/dotnet/xlf/CommonLocalizableStrings.es.xlf
+++ b/src/Cli/dotnet/xlf/CommonLocalizableStrings.es.xlf
@@ -198,9 +198,9 @@ El valor predeterminado es "true" si se especifica un identificador de entorno d
         <note />
       </trans-unit>
       <trans-unit id="SolutionExecutableConfigurationMismatchError">
-        <source>Multiple executable projects in the solution contain conflicting '{0}' values. Ensure the values match. Consider using a Directory.build.props file to set all project configurations. Conflicting projects:
+        <source>Multiple solution project(s) contain conflicting '{0}' values; ensure the values match. Consider using a Directory.build.props file to set all project configurations. Conflicting project:
 {1}.</source>
-        <target state="translated">Varios proyectos ejecutables de la solución contienen valores "{0}" en conflicto. Asegúrese de que los valores coinciden. Considere la posibilidad de usar un archivo Directory.build.props para establecer todas las configuraciones del proyecto. Proyectos en conflicto:
+        <target state="needs-review-translation">Varios proyectos ejecutables de la solución contienen valores "{0}" en conflicto. Asegúrese de que los valores coinciden. Considere la posibilidad de usar un archivo Directory.build.props para establecer todas las configuraciones del proyecto. Proyectos en conflicto:
 {1}.</target>
         <note />
       </trans-unit>
