--- a/src/Cli/dotnet/xlf/CommonLocalizableStrings.fr.xlf
+++ b/src/Cli/dotnet/xlf/CommonLocalizableStrings.fr.xlf
@@ -198,9 +198,9 @@ La valeur par défaut est 'true' si un identificateur de runtime est spécifié.
         <note />
       </trans-unit>
       <trans-unit id="SolutionExecutableConfigurationMismatchError">
-        <source>Multiple executable projects in the solution contain conflicting '{0}' values. Ensure the values match. Consider using a Directory.build.props file to set all project configurations. Conflicting projects:
+        <source>Multiple solution project(s) contain conflicting '{0}' values; ensure the values match. Consider using a Directory.build.props file to set all project configurations. Conflicting project:
 {1}.</source>
-        <target state="translated">Plusieurs projets exécutables de la solution contiennent des valeurs de '{0}' en conflit. Vérifiez que les valeurs correspondent. Utilisez un fichier Directory.build.props pour définir toutes les configurations de projet. Projets en conflit :
+        <target state="needs-review-translation">Plusieurs projets exécutables de la solution contiennent des valeurs de '{0}' en conflit. Vérifiez que les valeurs correspondent. Utilisez un fichier Directory.build.props pour définir toutes les configurations de projet. Projets en conflit :
 {1}.</target>
         <note />
       </trans-unit>
