--- a/src/Cli/dotnet/xlf/CommonLocalizableStrings.zh-Hans.xlf
+++ b/src/Cli/dotnet/xlf/CommonLocalizableStrings.zh-Hans.xlf
@@ -198,9 +198,9 @@ The default is 'true' if a runtime identifier is specified.</source>
         <note />
       </trans-unit>
       <trans-unit id="SolutionExecutableConfigurationMismatchError">
-        <source>Multiple executable projects in the solution contain conflicting '{0}' values. Ensure the values match. Consider using a Directory.build.props file to set all project configurations. Conflicting projects:
+        <source>Multiple solution project(s) contain conflicting '{0}' values; ensure the values match. Consider using a Directory.build.props file to set all project configurations. Conflicting project:
 {1}.</source>
-        <target state="translated">解决方案中的多个可执行项目包含冲突的 "{0}" 值。请确保值能够匹配。请考虑使用 Directory.build.props 文件设置所有项目配置。冲突项目: 
+        <target state="needs-review-translation">解决方案中的多个可执行项目包含冲突的 "{0}" 值。请确保值能够匹配。请考虑使用 Directory.build.props 文件设置所有项目配置。冲突项目: 
 {1}。</target>
         <note />
       </trans-unit>
