add console message for package validation success or failure (#28769)
This change prints a console message for each execution of ValidatePackage or ValidateAssembly. If there were no suppressions logged, then it prints "success". Otherwise, it explains how to rebuild to update the suppression files.

Fixes #28083.
Fixes #19214.

--- a/src/ApiCompat/Microsoft.DotNet.ApiCompat.Shared/CommonResources.resx
+++ b/src/ApiCompat/Microsoft.DotNet.ApiCompat.Shared/CommonResources.resx
@@ -117,11 +117,17 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="BreakingChangesFound" xml:space="preserve">
+    <value>API breaking changes found. If those are intentional, the APICompat suppression file can be updated by rebuilding with /p:ApiCompatGenerateSuppressionFile=true or --generate-suppression-file.</value>
+  </data>
   <data name="CreateWorkItemPerAssemblyAssembliesNotEqual" xml:space="preserve">
     <value>When enqueuing work items per assembly, the number of passed in left and right assemblies must be equal.</value>
   </data>
   <data name="InvalidRexegStringTransformationPattern" xml:space="preserve">
     <value>Invalid transformation pattern provided: '{0} - {1}'.</value>
+  </data>
+  <data name="NoBreakingChangesFound" xml:space="preserve">
+    <value>APICompat ran successfully without finding any breaking changes.</value>
   </data>
   <data name="SuppressionsFileNotSpecified" xml:space="preserve">
     <value>A file path must be passed in to successfully generate a compatibility suppression file.</value>
