--- a/src/ApiCompat/Microsoft.DotNet.ApiCompat.Shared/xlf/CommonResources.ru.xlf
+++ b/src/ApiCompat/Microsoft.DotNet.ApiCompat.Shared/xlf/CommonResources.ru.xlf
@@ -2,6 +2,11 @@
 <xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="1.2" xsi:schemaLocation="urn:oasis:names:tc:xliff:document:1.2 xliff-core-1.2-transitional.xsd">
   <file datatype="xml" source-language="en" target-language="ru" original="../CommonResources.resx">
     <body>
+      <trans-unit id="BreakingChangesFound">
+        <source>API breaking changes found. If those are intentional, the APICompat suppression file can be updated by rebuilding with /p:ApiCompatGenerateSuppressionFile=true or --generate-suppression-file.</source>
+        <target state="new">API breaking changes found. If those are intentional, the APICompat suppression file can be updated by rebuilding with /p:ApiCompatGenerateSuppressionFile=true or --generate-suppression-file.</target>
+        <note />
+      </trans-unit>
       <trans-unit id="CreateWorkItemPerAssemblyAssembliesNotEqual">
         <source>When enqueuing work items per assembly, the number of passed in left and right assemblies must be equal.</source>
         <target state="translated">При постановке рабочих элементов в очередь на сборку число переданных левой и правой сборок должно совпадать</target>
@@ -10,6 +15,11 @@
       <trans-unit id="InvalidRexegStringTransformationPattern">
         <source>Invalid transformation pattern provided: '{0} - {1}'.</source>
         <target state="translated">Предоставлен недопустимый шаблон преобразования: "{0} - {1}".</target>
+        <note />
+      </trans-unit>
+      <trans-unit id="NoBreakingChangesFound">
+        <source>APICompat ran successfully without finding any breaking changes.</source>
+        <target state="new">APICompat ran successfully without finding any breaking changes.</target>
         <note />
       </trans-unit>
       <trans-unit id="SuppressionsFileNotSpecified">
