--- a/src/Tasks/Common/Resources/Strings.resx
+++ b/src/Tasks/Common/Resources/Strings.resx
@@ -863,10 +863,6 @@ You may need to build the project on another operating system or architecture, o
     <value>NETSDK1189: Prefer32Bit is not supported and has no effect for netcoreapp target.</value>
     <comment>{StrBegin="NETSDK1189: "}</comment>
   </data>
-  <data name="PReleaseRequiresEnvVarOnSln" xml:space="preserve">
-    <value>NETSDK1190: To use '{0}' in solution projects, you must set the environment variable '{1}' (to true). This will increase the time to complete the operation.</value>
-    <comment>{StrBegin="NETSDK1190: "}</comment>
-  </data>
   <data name="ImplicitRuntimeIdentifierResolutionForPublishPropertyFailed" xml:space="preserve">
     <value>NETSDK1191: A runtime identifier for the property '{0}' couldn't be inferred. Specify a rid explicitly.</value>
       <comment>{StrBegin="NETSDK1191: "}</comment>
@@ -878,5 +874,10 @@ You may need to build the project on another operating system or architecture, o
   <data name="PublishSelfContainedMustBeBool" xml:space="preserve">
     <value>NETSDK1193: If PublishSelfContained is set, it must be either true or false. The value given was '{0}'.</value>
     <comment>{StrBegin="NETSDK1193: "}</comment>
+  </data>
+  <data name="SolutionProjectConfigurationsConflict" xml:space="preserve">
+    <value>NETSDK1194: Multiple solution project(s) contain conflicting '{0}' values; ensure the values match. Consider using a Directory.build.props file to set all project configurations. Conflicting project:
+{1}.</value>
+    <comment>{StrBegin="NETSDK1194: "}</comment>
   </data>
 </root>
