Localize strings on hardlink failure on non-Windows

--- a/src/Tasks/Resources/Strings.resx
+++ b/src/Tasks/Resources/Strings.resx
@@ -221,6 +221,9 @@
 
         If this bucket overflows, pls. contact 'vsppbdev'.
   -->
+  <data name="Copy.LinklibraryFailedPrefix">
+    <value>The link() library call failed with the following error code: </value>
+  </data>
   <data name="Copy.CreatesDirectory">
     <value>Creating directory "{0}".</value>
   </data>
