--- a/src/MSBuild/Resources/xlf/Strings.de.xlf
+++ b/src/MSBuild/Resources/xlf/Strings.de.xlf
@@ -151,7 +151,7 @@
 
                      This flag is experimental and may not work as intended.
     </source>
-        <target state="needs-review-translation">  -isolateProjects[:True|Message|False]
+        <target state="needs-review-translation">  -isolateProjects[:True|False]
                      Führt dazu, dass MSBuild jedes Projekt isoliert erstellt.
 
                      Dies ist ein restriktiverer Modus von MSBuild, da er erfordert, dass
@@ -654,7 +654,7 @@ Beispiel:
       <trans-unit id="HelpMessage_InputCachesFiles">
         <source>  -inputResultsCaches:&lt;cacheFile&gt;...
                      Semicolon separated list of input cache files that MSBuild
-                     will read build results from. If -IsolateProjects is set
+                     will read build results from. If -isolateProjects is set
                      to False, this sets it to True. (short form: -irc)
    </source>
         <target state="needs-review-translation">  -inputResultsCaches:&lt;cacheFile&gt;...
@@ -672,7 +672,7 @@ Beispiel:
         <source>  -outputResultsCache:[cacheFile]
                      Output cache file where MSBuild will write the contents of
                      its build result caches at the end of the build.
-                     If -IsolateProjects is set to False, this sets it to True.
+                     If -isolateProjects is set to False, this sets it to True.
                      (short form: -orc)
    </source>
         <target state="needs-review-translation">  -outputResultsCache:[Cachedatei]
