--- a/src/MSBuild/Resources/xlf/Strings.ko.xlf
+++ b/src/MSBuild/Resources/xlf/Strings.ko.xlf
@@ -151,7 +151,7 @@
 
                      This flag is experimental and may not work as intended.
     </source>
-        <target state="needs-review-translation">  -isolateProjects[:True|Message|False]
+        <target state="needs-review-translation">  -isolateProjects[:True|False]
                      MSBuild가 격리 모드에서 각 프로젝트를 빌드하도록 합니다.
 
                      이 모드는 프로젝트 그래프가 평가 시간에 정적으로
@@ -654,7 +654,7 @@
       <trans-unit id="HelpMessage_InputCachesFiles">
         <source>  -inputResultsCaches:&lt;cacheFile&gt;...
                      Semicolon separated list of input cache files that MSBuild
-                     will read build results from. If -IsolateProjects is set
+                     will read build results from. If -isolateProjects is set
                      to False, this sets it to True. (short form: -irc)
    </source>
         <target state="needs-review-translation">  -inputResultsCaches:&lt;cacheFile&gt;...
@@ -672,7 +672,7 @@
         <source>  -outputResultsCache:[cacheFile]
                      Output cache file where MSBuild will write the contents of
                      its build result caches at the end of the build.
-                     If -IsolateProjects is set to False, this sets it to True.
+                     If -isolateProjects is set to False, this sets it to True.
                      (short form: -orc)
    </source>
         <target state="needs-review-translation">  -outputResultsCache:[cacheFile]
