--- a/src/MSBuild/Resources/xlf/Strings.ru.xlf
+++ b/src/MSBuild/Resources/xlf/Strings.ru.xlf
@@ -150,7 +150,7 @@
 
                      This flag is experimental and may not work as intended.
     </source>
-        <target state="needs-review-translation">  -isolateProjects[:True|Message|False]
+        <target state="needs-review-translation">  -isolateProjects[:True|False]
                      Сообщает MSBuild, что нужно собирать каждый проект по отдельности.
 
                      Это более строгий режим MSBuild, так как он требует,
@@ -158,9 +158,6 @@
                      во время оценки, но он может улучшить планирование и сократить
                      издержки памяти при сборке больших наборов проектов.
                      (Краткая форма: -isolate)
-
-                     При равенстве Message, все нарушения изоляции
-                     регистрируются как сообщения.
 
                      Это экспериментальный флаг. Может работать не так, как ожидалось.
     </target>
@@ -656,7 +653,7 @@
       <trans-unit id="HelpMessage_InputCachesFiles">
         <source>  -inputResultsCaches:&lt;cacheFile&gt;...
                      Semicolon separated list of input cache files that MSBuild
-                     will read build results from. If -IsolateProjects is set
+                     will read build results from. If -isolateProjects is set
                      to False, this sets it to True. (short form: -irc)
    </source>
         <target state="needs-review-translation">  -inputResultsCaches:&lt;файл_кэша&gt;...
@@ -674,7 +671,7 @@
         <source>  -outputResultsCache:[cacheFile]
                      Output cache file where MSBuild will write the contents of
                      its build result caches at the end of the build.
-                     If -IsolateProjects is set to False, this sets it to True.
+                     If -isolateProjects is set to False, this sets it to True.
                      (short form: -orc)
    </source>
         <target state="needs-review-translation">  -outputResultsCache:[файл_кэша]
