Revert back to the old error message

--- a/src/Tasks/Common/Resources/Strings.resx
+++ b/src/Tasks/Common/Resources/Strings.resx
@@ -884,7 +884,7 @@ You may need to build the project on another operating system or architecture, o
     <comment>{StrBegin="NETSDK1195: "}</comment>
   </data>
   <data name="SolutionProjectConfigurationsConflict" xml:space="preserve">
-    <value>NETSDK1196: Multiple solution projects contain conflicting '{0}' values. Every project must have the same value of '{0}', only true; or false. The property can instead be defined globally, such as: -p:{0}=true. Conflicting project:</value>
+    <value>NETSDK1196: Multiple solution project(s) contain conflicting '{0}' values; ensure the values match. Consider using a Directory.build.props file to set all project configurations. Conflicting project:</value>
       <comment>{StrBegin="NETSDK1196: "}</comment>
   </data>
 </root>
