--- a/src/Cli/dotnet/xlf/CommonLocalizableStrings.it.xlf
+++ b/src/Cli/dotnet/xlf/CommonLocalizableStrings.it.xlf
@@ -242,6 +242,13 @@ L'impostazione predefinita è 'true' se si specifica un identificatore di runtim
         <target state="translated">Elimina</target>
         <note />
       </trans-unit>
+      <trans-unit id="SolutionProjectConfigurationsConflict">
+        <source>Multiple solution project(s) contain conflicting '{0}' values; ensure the values match. Consider using a Directory.build.props file to set all project configurations. Conflicting projects:
+{1}</source>
+        <target state="new">Multiple solution project(s) contain conflicting '{0}' values; ensure the values match. Consider using a Directory.build.props file to set all project configurations. Conflicting projects:
+{1}</target>
+        <note />
+      </trans-unit>
       <trans-unit id="Update">
         <source>Update</source>
         <target state="translated">Aggiorna</target>
