--- a/src/Cli/dotnet/xlf/CommonLocalizableStrings.pt-BR.xlf
+++ b/src/Cli/dotnet/xlf/CommonLocalizableStrings.pt-BR.xlf
@@ -242,6 +242,13 @@ O padrão é 'true' se um identificador de runtime for especificado.</target>
         <target state="translated">Excluir</target>
         <note />
       </trans-unit>
+      <trans-unit id="SolutionProjectConfigurationsConflict">
+        <source>Multiple solution project(s) contain conflicting '{0}' values; ensure the values match. Consider using a Directory.build.props file to set all project configurations. Conflicting projects:
+{1}</source>
+        <target state="new">Multiple solution project(s) contain conflicting '{0}' values; ensure the values match. Consider using a Directory.build.props file to set all project configurations. Conflicting projects:
+{1}</target>
+        <note />
+      </trans-unit>
       <trans-unit id="Update">
         <source>Update</source>
         <target state="translated">Atualização</target>
